kubernetes/network_policies/client_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-network-policy
  namespace: client
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
